# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Qubit calibration engine: characterization and auto-tuning"

[dependencies]
sequencer = { path = "../sequencer" }
num-complex.workspace = true
rand.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
serde.workspace = true
