# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "error-correction"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Surface-code error correction layer (software model)"

[dependencies]
sequencer = { path = "../sequencer" }
thiserror.workspace = true
serde.workspace = true
